syntax = "proto3";

package sum;

option go_package = "grpc_course/sum/sumpb;sumpb";

message Numbers {
    int32 number1 = 1;
    int32 number2 = 2;
}

message SumRequest {
    Numbers numbers = 1; 
}

message SumResponse {
    int32 result = 1;
}


service SumService{
    // unary API
    rpc Sum(SumRequest) returns (SumResponse) {};
}
